--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,10 @@ repositories {
 
 def restAssuredVersion = "5.0.1",
     allureVersion = "2.17.3",
-    selenideVersion = "6.2.1",
-    junitVersion = "5.8.2"
+    selenideVersion = "5.25.0",
+    junitVersion = "5.8.2",
+    slf4jVersion = "1.7.32",
+    appiumVersion = "7.6.0"
 
 allure {
     adapter {
@@ -31,10 +33,12 @@ dependencies {
             "org.aspectj:aspectjweaver:1.9.6",
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "io.appium:java-client:7.3.0",
+            "io.appium:java-client:$appiumVersion",
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "org.junit.jupiter:junit-jupiter-api:$junitVersion")
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    testRuntimeOnly(
+            "org.slf4j:slf4j-simple:$slf4jVersion",
+            "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
 }
 
 tasks.withType(JavaCompile) {
