added custom selenide task

--- a/build.gradle
+++ b/build.gradle
@@ -67,3 +67,9 @@ tasks.withType(Test) {
         }
     }
 }
+
+task selenide_android_test(type: Test {
+    UseJUnitPlatform {
+        incudeTags 'Selenide'
+    }
+})
