added settings app

--- a/build.gradle
+++ b/build.gradle
@@ -68,8 +68,8 @@ tasks.withType(Test) {
     }
 }
 
-task selenide_android_test(type: Test {
+task selenide_android_test(type: Test) {
     UseJUnitPlatform {
         incudeTags 'Selenide'
     }
-})
+}
