--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ tasks.withType(Test) {
 }
 
 task selenide_android_test(type: Test) {
-    UseJUnitPlatform {
+    useJUnitPlatform {
         incudeTags 'Selenide'
     }
 }
