fix video rest get

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,6 @@ tasks.withType(Test) {
 
 task selenide_android_test(type: Test) {
     useJUnitPlatform {
-        incudeTags 'selenide'
+        includeTags 'selenide'
     }
 }
